syntax = "proto3";

package com.sbss.bithon.agent.grpc;

option java_multiple_files = true;

message Instance {
  string appName  = 1;
  string hostName = 2;
  int32 port = 3;
  int32 interval = 4;
  int64 timestamp = 5;
}
